--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="title_teacher">Teacher</string>
     <string name="title_student">Student</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="array_title">
+        <item>Mr.</item>
+        <item>Ms.</item>
+        <item>Prof.</item>
+        <item>Dr.</item>
+    </string-array>
 </resources>
